--- a/DatabaseOperation/web/WEB-INF/web.xml
+++ b/DatabaseOperation/web/WEB-INF/web.xml
@@ -24,7 +24,7 @@
     <servlet-name>Faces Servlet</servlet-name>
   </filter-mapping>
   <welcome-file-list>
-    <welcome-file>faces/termSelect.jsp</welcome-file>
+    <welcome-file>faces/login.jsp</welcome-file>
   </welcome-file-list>
   <listener>
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
