fixed adminLogin bug

--- a/DatabaseOperation/web/WEB-INF/web.xml
+++ b/DatabaseOperation/web/WEB-INF/web.xml
@@ -32,7 +32,7 @@
     <servlet-name>Faces Servlet</servlet-name>
   </filter-mapping>
   <welcome-file-list>
-    <welcome-file>faces/login.xhtml</welcome-file>
+    <welcome-file>faces/adminLogin.xhtml</welcome-file>
   </welcome-file-list>
   <listener>
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
