--- a/DatabaseOperation/.classpath
+++ b/DatabaseOperation/.classpath
@@ -17,6 +17,7 @@
 	<classpathentry kind="lib" path="web/WEB-INF/lib/mysql-connector-java-5.1.20-bin.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/standard-1.1.2.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/tomahawk12-1.1.13.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/servlet-api.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 6 (MacOS X Default)">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
