--- a/DatabaseOperation/.classpath
+++ b/DatabaseOperation/.classpath
@@ -18,11 +18,10 @@
 	<classpathentry kind="lib" path="web/WEB-INF/lib/standard-1.1.2.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/tomahawk12-1.1.13.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/servlet-api.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 6 (MacOS X Default)">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre6">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
-
