--- a/DatabaseOperation/web/WEB-INF/web.xml
+++ b/DatabaseOperation/web/WEB-INF/web.xml
@@ -40,4 +40,9 @@
   <listener>
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
   </listener>
+  
+  <context-param>  
+    <param-name>primefaces.THEME</param-name>  
+    <param-value>south-street</param-value>  
+</context-param> 
 </web-app>
