--- a/DatabaseOperation/.classpath
+++ b/DatabaseOperation/.classpath
@@ -17,6 +17,14 @@
 	<classpathentry kind="lib" path="web/WEB-INF/lib/mysql-connector-java-5.1.20-bin.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/standard-1.1.2.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/openid4java-0.9.6.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/primefaces-3.3.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/httpclient-4.2.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/guice-3.0-no_aop.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/httpcore-4.2.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-codec-1.6.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/fluent-hc-4.2.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 6 (MacOS X Default)">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
