--- a/DatabaseOperation/.classpath
+++ b/DatabaseOperation/.classpath
@@ -25,6 +25,7 @@
 	<classpathentry kind="lib" path="web/WEB-INF/lib/httpcore-4.2.1.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-codec-1.6.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/fluent-hc-4.2.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/mail.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 6 (MacOS X Default)">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
