add error handle

--- a/DatabaseOperation/web/WEB-INF/web.xml
+++ b/DatabaseOperation/web/WEB-INF/web.xml
@@ -25,9 +25,35 @@
     <servlet-name>Faces Servlet</servlet-name>
   </filter-mapping>
   <welcome-file-list>
-    <welcome-file>faces/indext.xhtml</welcome-file>
+    <welcome-file>/faces/indext.xhtml</welcome-file>
   </welcome-file-list>
   <listener>
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
   </listener>
+  
+  <error-page>
+    <error-code>401</error-code>
+    <location>/faces/loginErr1.xhtml</location>
+  </error-page>
+    
+  <error-page>
+    <error-code>403</error-code>
+    <location>/faces/loginErr1.xhtml</location>
+  </error-page>
+  
+  <error-page>
+    <error-code>404</error-code>
+    <location>/faces/loginErr1.xhtml</location>
+  </error-page>
+  
+  <error-page>
+    <error-code>500</error-code>
+    <location>/faces/loginErr1.xhtml</location>
+  </error-page>  
+
+  <error-page>
+    <error-code>503</error-code>
+    <location>/faces/loginErr1.xhtml</location>
+  </error-page>
+  
 </web-app>
